tempfile/derive_more/tests/compile_fail/as_mut/struct_and_field.rs
#[derive(derive_more::AsMut)]
#[as_mut(forward)]
struct Foo {
    #[as_mut]
    bar: i32,
}

fn main() {}
